swagger, commentaire
