# run.py
@@ -4,6 +4,12 @@ from flask_marshmallow import Marshmallow
 from flask_jwt_extended import JWTManager
 from flask_swagger_ui import get_swaggerui_blueprint
 
+from app.routes.firewall import firewall_bp
+from app.routes.policy import policy_bp
+from app.routes.rule import rule_bp
+from app.errors import errors
+from app.auth import auth_bp
+
 db = SQLAlchemy()
 ma = Marshmallow()
 
@@ -16,24 +22,11 @@ db.init_app(app)
 ma.init_app(app)
 jwt = JWTManager(app)
 
-from app.routes.firewall import firewall_bp
-
+# register blueprints
 app.register_blueprint(firewall_bp)
-
-from app.routes.policy import policy_bp
-
 app.register_blueprint(policy_bp)
-
-from app.routes.rule import rule_bp
-
 app.register_blueprint(rule_bp)
-
-from app.errors import errors
-
 app.register_blueprint(errors)
-
-from app.auth import auth_bp
-
 app.register_blueprint(auth_bp, url_prefix='/auth')
 
 # Swagger
@@ -49,6 +42,7 @@ swagger_blueprint = get_swaggerui_blueprint(
 app.register_blueprint(swagger_blueprint, url_prefix=SWAGGER_URL)
 
 
+# tester acces swagger.json
 @app.route('/test-static')
 def test_static():
     return send_from_directory(app.static_folder, 'swagger.json')
